--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,11 @@ ja:
   home:
     index:
       app_name: 'AllySocial'
+      dashboard: 'ダッシュボード'
+      english: '英語'
+      japanese: '日本語'
+      sign_in: 'ログイン'
+      sign_out: 'ログアウト'
       hero_section:
         text: 'あなたのフォロワーから、プロフェッショナルを見付けよう。'
         button: '無料で始める'
