--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -68,3 +68,11 @@ ja:
       statuses: 'ツイート'
       following: 'フォロー'
       followers: 'フォロワー'
+      is_follower: 'フォローされています'
+      active_1hour: '1時間以内にツイート'
+      active_12hours: '12時間以内にツイート'
+      active_3days: '3日以内にツイート'
+      active_1week: '1週間以内にツイート'
+      inactive_1week: '1週間ツイートなし'
+      inactive_1month: '1ヶ月間ツイートなし'
+      inactive_3months: '3ヶ月間ツイートなし'
