Add completed_at column to some tables

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,6 +49,9 @@ en:
       contact:
         title_html:  'We <i class="fas fa-heart"></i> new customers!'
         text_html: 'This app has only just been released. I will be actively fixing bugs.<br>If you have any requests, please feel free to contact me.'
+  waiting:
+    index:
+      text: 'Analyzing data for @%{user}. I’ll be with you in a moment.'
   dashboards:
     show:
       statuses: 'Statuses'
