--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,10 @@ en:
   waiting:
     index:
       text: 'Analyzing data for @%{user}. I’ll be with you in a moment.'
+      description_html: |
+        If you have less than 10,000 followers, %{app} will usually complete the analysis of your data within a minute.
+      support_html: |
+        If you have waited too long and the analysis is not complete, please contact <a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a>.
   dashboards:
     show:
       statuses: 'Statuses'
