--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,11 @@ en:
           <span class="badge badge-primary category"></span>
       js:
         specify_correct_label: 'Please specify search label.'
+        no_results_found_html:
+          No search results are found.<br>
+          <br>
+          %{app} has only just been released. I will be actively fixing bugs.
+          If you have any bug reports or feature requests, please feel free to contact <a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a>.
   users:
     omniauth_callbacks:
       success: 'Successfully authenticated from Twitter account.'
