--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -13,10 +13,18 @@ ja:
       download:
         title: '新しいパートナーは、フォロワーの中にいます。'
         text_html: |
-          フォロワーは、もっとあなたのことを知りたくてあなたをフォローしています。あなたがフォロワーに興味を持てば、すぐに仲良くなることができます。<br>
-          <br>
           あなたが探しているのは、新しいビジネスパートナーですか？ それとも趣味友達ですか？ どちらも、あなたのフォロワーの中に既にいます！
           フォロワーを検索して、新しい仲間と新しい関係を築きましょう。
+        features:
+          what_app_can_do: '%{app} で出来ること'
+          job: '機能1：フォロワーを「職種」で検索する'
+          location: '機能2：フォロワーを「場所」で検索する'
+          url: '機能3：フォロワーを「URL」で検索する'
+          keyword: '機能4：フォロワーを「キーワード」で検索する'
+      download2:
+        title: 'フォロワーとは、すぐに仲良くなれます。'
+        text_html: |
+          フォロワーは、もっとあなたのことを知りたくてあなたをフォローしています。あなたがフォロワーに興味を持てば、すぐに仲良くなることができます。
         features:
           what_app_can_do: '%{app} で出来ること'
           job: '機能1：フォロワーを「職種」で検索する'
@@ -47,7 +55,7 @@ ja:
         title: 'フォロワーはあなたからの連絡を待っています。'
         text: '試しに使ってみる'
       contact:
-        title_html:  '使ってくれて <i class="fas fa-heart"></i> ありがとう！'
+        title_html: '使ってくれて <i class="fas fa-heart"></i> ありがとう！'
         text_html: 'このアプリはリリースされたばかりです。バグは積極的に直していきます。<br>もし分からないことがあれば、お気軽にご連絡ください。'
   waiting:
     index:
@@ -121,6 +129,18 @@ ja:
         もし分からないことがあれば、<a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a> にいつでも質問してください。
       positive: 'トップページを開く'
       negative: '閉じる'
+    privacy_modal:
+      title: 'プライバシーポリシー'
+      body:
+        本サイトでは、個人情報や機密性の高いユーザーデータ（個人を特定できる情報、財務や支払い情報、健康情報、認証情報、フォームデータ、ウェブ閲覧履歴、個人的な通信）を扱うことはありません。
+      button: '閉じる'
+    terms_modal:
+      title: '利用規約'
+      body_html:
+        本サイトを利用することで、利用規約とプライバシーポリシーに同意をしたものとみなされます。<br>
+        本サイトのご利用は、お客様ご自身の責任において行われるものとします。すべてのサービスは「現状のまま」提供されており、いかなる種類の保証もありません。<br>
+        本サイトで購入した商品については払い戻し不可となります。
+      button: '閉じる'
   templates:
     search_response_user_template:
       statuses: 'ツイート'
